Fixed size of logo on IE.

--- a/frontend/src/sass/screen.scss
+++ b/frontend/src/sass/screen.scss
@@ -4,6 +4,8 @@
 $sprites-spacing: 5px;
 @import "sprites/*.png";
 
+// GENERAL
+
 html, body {
     height: 100%;
     font-family: 'Monda', Helvetica, sans-serif;
@@ -41,6 +43,7 @@ html, body {
 
     .brand {
         font-size: 18px;
+        width: 250px;
         padding: 12px 0 0;
         margin: 0 15px 0 0;
         text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
